--- a/todo/templates/todo/index.html
+++ b/todo/templates/todo/index.html
@@ -5,7 +5,7 @@
     <title>Django todo list </title>
 </head>
 <body>
-<h1>Главная страница</h1>
+<h1>To-Do Главная страница</h1>
 <p><a href="{% url 'add' %}">Add task</a></p>
 
     <ul>
